<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/term_agreement_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toTopOf="parent" />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/textView" />

    <FrameLayout
        android:id="@+id/flAgreeAll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/cbAgreeAll"
        app:layout_constraintEnd_toEndOf="@id/tvAgreeAll"
        app:layout_constraintStart_toStartOf="@id/cbAgreeAll"
        app:layout_constraintTop_toTopOf="@id/cbAgreeAll" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbAgreeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/space" />

    <TextView
        android:id="@+id/tvAgreeAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_agree_all"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/cbAgreeAll"
        app:layout_constraintStart_toEndOf="@id/cbAgreeAll"
        app:layout_constraintTop_toTopOf="@id/cbAgreeAll" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/gray_line"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/cbAgreeAll" />

    <ImageView
        android:layout_width="104dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/cd_hi"
        android:src="@drawable/hi"
        app:layout_constraintBottom_toTopOf="@id/view"
        app:layout_constraintEnd_toEndOf="@id/view" />

    <FrameLayout
        android:id="@+id/flAgreeLocation"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/cbAgreeLocation"
        app:layout_constraintEnd_toEndOf="@id/textView2"
        app:layout_constraintStart_toStartOf="@id/cbAgreeLocation"
        app:layout_constraintTop_toTopOf="@id/cbAgreeLocation" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbAgreeLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/view" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_agree_location"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/cbAgreeLocation"
        app:layout_constraintStart_toEndOf="@id/cbAgreeLocation"
        app:layout_constraintTop_toTopOf="@id/cbAgreeLocation" />

    <ImageView
        android:id="@+id/ivSeeLocationTerm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/cd_service_term"
        app:layout_constraintBottom_toBottomOf="@id/textView2"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintTop_toTopOf="@id/textView2"
        app:srcCompat="@drawable/ic_baseline_chevron_right_24" />

    <FrameLayout
        android:id="@+id/flAgreeMarketingPush"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@id/cbAgreeMarketingPush"
        app:layout_constraintEnd_toEndOf="@id/tvMarketingPush"
        app:layout_constraintStart_toStartOf="@id/cbAgreeMarketingPush"
        app:layout_constraintTop_toTopOf="@id/cbAgreeMarketingPush" />

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/cbAgreeMarketingPush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clickable="false"
        android:minWidth="0dp"
        android:minHeight="0dp"
        app:layout_constraintStart_toStartOf="@id/glStart"
        app:layout_constraintTop_toBottomOf="@id/cbAgreeLocation" />

    <TextView
        android:id="@+id/tvMarketingPush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_agree_marketing_push"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@id/cbAgreeMarketingPush"
        app:layout_constraintStart_toEndOf="@id/cbAgreeMarketingPush"
        app:layout_constraintTop_toTopOf="@id/cbAgreeMarketingPush" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:enabled="false"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/text_start"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/glEnd"
        app:layout_constraintStart_toStartOf="@id/glStart" />
</androidx.constraintlayout.widget.ConstraintLayout>